test/simple/typeerrors/Examples/QualGuard.hs
module QualGuard where

f = [ 3 | 5 ]
